--- a/Controllers/login.html
+++ b/Controllers/login.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="login.css">
+        <link rel="stylesheet" href="./public/static/css/login.css">
       </head>
 <body>
 <div class="login-wrap">
@@ -17,17 +17,17 @@
 					<label for="pass" class="label">Wachtwoord</label>
 					<input id="pass" type="password" class="input" data-type="password">
 				</div>
-				<div class="group">
+				<!-- <div class="group">
 					<input id="check" type="checkbox" class="check" checked>
 					<label for="check"><span class="icon"></span> Wachtwoord onthouden?</label>
-				</div>
+				</div> -->
 				<div class="group">
 					<input type="submit" class="button" value="Inloggen">
 				</div>
 				<div class="hr"></div>
-				<div class="foot-lnk">
+				<!-- <div class="foot-lnk">
 					<a href="#forgot">Wachtwoord vergeten?</a>
-				</div>
+				</div> -->
 			</div>
 			<div class="sign-up-htm">
 				<div class="group">
