registreer + inlog.html update

--- a/Controllers/login.html
+++ b/Controllers/login.html
@@ -48,20 +48,20 @@
   					<input id="pass" name="pwdcheck" type="password" class="input" data-type="password">
                   </div>
                   <div class="group">
-  					<label for="pass" class="label">Naam</label>
-  					<input id="pass" name="name" type="password" class="input" data-type="password">
+  					<label for="name" class="label">Naam</label>
+  					<input id="name" name="name" type="text" class="input">
                   </div>
                   <div class="group">
-  					<label for="pass" class="label">Adres</label>
-  					<input id="pass" name="adres" type="password" class="input" data-type="password">
+  					<label for="address" class="label">Adres</label>
+  					<input id="address" name="address" type="text" class="input">
                   </div>
                   <div class="group">
-  					<label for="pass" class="label">Woonplaats</label>
-  					<input id="pass" name="city" type="password" class="input" data-type="password">
+  					<label for="city" class="label">Woonplaats</label>
+  					<input id="city" name="city" type="text" class="input">
   				</div>
   				<div class="group">
-  					<label for="pass" class="label">E-mailadres</label>
-  					<input id="pass" name="email" type="text" class="input">
+  					<label for="email" class="label">E-mailadres</label>
+  					<input id="email" name="email" type="text" class="input">
   				</div>
   				<div class="group">
   					<input type="submit" name="submitReg" class="button" value="Aanmelden">
